--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
-@import "./style_Config/mixins.scss";
+// @import "./style_Config/mixins.scss";
 
 
 *{
     margin: 0;
+    padding: 0;
+    font-family: 'DM Sans',sans-serif;
 }
