--- a/src/components/intro/style.scss
+++ b/src/components/intro/style.scss
@@ -2,5 +2,24 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    background:linear-gradient(121deg,#2559cd 9%,#1c4cc8 41%,#0f38c1 88%);
+    background: linear-gradient(
+        121.46deg,
+        #121316 9%,
+        #030e2c 41%,
+        #050e2e 80%
+    );
+    position: relative;
+    display: flex;
+    justify-content: center;
+    .vector-bg{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-image: url('../../images/background.jpg');
+        background-position: center center;
+        background-repeat: no-repeat;
+        z-index: 0;
+        opacity: 0.4;
+    }
+
 }
