--- a/src/components/intro/style.scss
+++ b/src/components/intro/style.scss
@@ -16,10 +16,35 @@
         height: 100%;
         position: absolute;
         background-image: url('../../images/background.jpg');
+        background-size: cover;
+        // background-image: url('https://img.freepik.com/free-vector/geometric-network-connection-background_23-2148876717.jpg?w=1060&t=st=1712421666~exp=1712422266~hmac=53f5e5295afeb2ab072a6a3b4df06372a749f0e98a82f27448cdc138042b7b20');
         background-position: center center;
         background-repeat: no-repeat;
         z-index: 0;
-        opacity: 0.4;
+        opacity: 8;
+    }
+    .cloud{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width:100%;
+        z-index: 2;
+
+    }
+    .cloud-soft{
+        position: absolute;
+        bottom: 0;
+        left: 0; 
+        width: 100%;
+        z-index: 1;
+        mix-blend-mode: soft-light;
+    }
+    .content{
+        width: 1200px;
+        padding: 0 20px;
+        position: relative;
+        display: flex;
+        flex-direction: column;
     }
 
 }
