:bulb::bulb: The section was created :bulb::bulb:

--- a/src/components/intro/intro-content/style.scss
+++ b/src/components/intro/intro-content/style.scss
@@ -102,6 +102,7 @@
             .highlights {
                 position: absolute;
                 border-radius: 6px;
+                // background: $white;
                 // @include glassmorphism-effect;
                 // transform: scale(0.6);
                 // @include small-screen {
