--- a/src/components/shared/CallToAction/style.scss
+++ b/src/components/shared/CallToAction/style.scss
@@ -14,10 +14,23 @@
     position: relative;
     overflow: hidden;
     @include typography(18px,400,1);
-    .text,.arrow-icon{
+    .text,
+    .arrow-icon,
+    .icon {
         position: relative;
         z-index: 1;
         transition: all ease 500ms;
+    }
+    .icon{
+        width: 21px;
+        height: 21px;
+        background-color: $yellow;
+        border-radius: 41px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 10px;
+        font-size: 12px;
     }
     &:before{
         content: "";
@@ -34,7 +47,8 @@
         &::before{
             transform: translateX(0);
         }
-        .arrow-icon{
+        .arrow-icon,
+        .icon{
             background:$white; 
         }
     }
