--- a/src/components/portfolio/showcase/style.scss
+++ b/src/components/portfolio/showcase/style.scss
@@ -52,6 +52,18 @@
                 }
             }
         }
+        &.zoomIn{
+            transform: scale(0);
+            animation: zoomIn 400ms cubic-bezier(0.175,0.885,0.32,1.275)
+                forwards;
+        }
+        &.zoomOut{
+            transform: scale(1);
+            animation: zoomOut 400ms cubic-bezier(0.175,0.885,0.32,1.275)
+                forwards;
+        }
+
+
         &:hover{
             z-index: 1;
             transform: scale(1.2);
@@ -62,5 +74,22 @@
                 transform: translateY(-20px);
             }
         }
+    }
+}
+
+@keyframes zoomIn{
+    0%{
+        transform: scale(0);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+@keyframes zoomOut{
+    0%{
+        transform: scale(1);
+    }
+    100%{
+        transform: scale(0);
     }
 }
