--- a/src/components/contact/style.scss
+++ b/src/components/contact/style.scss
@@ -1,6 +1,8 @@
-.contact-content-wrapper{
+@import "../../style-config/mixins.scss", "../../style-config/variable.scss";
+.contect-content-wrapper{
     display: flex;
+    flex-direction: row;
     width: 100%;
     margin-top: 25px;
-    flex-direction: column;
+    
 }
