--- a/src/components/contact/form/style.scss
+++ b/src/components/contact/form/style.scss
@@ -6,7 +6,7 @@
     form{
         display: flex;
         flex-flow: row wrap;
-        margin-top: -10px;
+        margin-top:-10px;
     }
     .input-field{
         width:calc(50% - 20px);
@@ -30,7 +30,7 @@
 
         }
         .textarea{
-            width: 100;
+            width: 100%;
             height: 120px;
             border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 6px;
@@ -44,7 +44,12 @@
                 border-color: $white;
             }
         }
+        .error{
+            color:$white;
+            @include typography(12px, 400, 24px);
+        }
     }
+    
     button{
         outline: 0;
         border: 0;
