--- a/src/components/intro/intro-content/style.scss
+++ b/src/components/intro/intro-content/style.scss
@@ -4,11 +4,11 @@
     flex-grow: 1;
     display: flex;
     padding-top: 75px;
-    align-items: flex-end;
-    // @include small-screen {
-    //     padding-top: 0;
-    //     align-items: flex-end;
-    // }
+    // align-items: flex-end;
+    @include small-screen {
+        padding-top: 0;
+        align-items: flex-end;
+    }
     .layout {
         display: flex;
         flex-direction: column;
@@ -16,7 +16,7 @@
             flex-direction: row;
         }
         .left-col {
-            width: 50%;
+            width: 100%;
             @include small-screen {
                 width: 45%;
             }
@@ -25,7 +25,7 @@
             }
             @include large-screen {
                 padding-top: 0;
-                width: 55%;
+                width: 37%;
             }
             .title {
                 display: flex;
@@ -36,7 +36,7 @@
                     text-align: left;
                 }
                 .small-text {
-                    @include typography(42px, 400, 48px);
+                    @include typography(24px, 400, 30px);
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -49,7 +49,7 @@
                     }
                 }
                 .big-text {
-                    @include typography(62px, 400, 72px);
+                    @include typography(42px, 400, 52px);
                     @include small-screen {
                         @include typography(62px, 400, 72px);
                     }
@@ -58,9 +58,11 @@
             p {
                 color: $white;
                 @include typography(18px, 400, 24px);
-                margin: 25px 0;
+                margin: 15px 0;
                 padding: 0 15px;
+                text-align: center;
                 @include small-screen {
+                    text-align: left;
                     @include typography(18px, 400, 24px);
                     margin: 25px 0;
                     padding: 0;
