--- a/src/components/intro/style.scss
+++ b/src/components/intro/style.scss
@@ -1,3 +1,4 @@
+@import "../../style-config/mixins.scss","../../style-config/variable.scss";
 .Intro-section{
     width: 100%;
     height: 100vh;
@@ -18,33 +19,44 @@
         background-image: url('../../images/background.jpg');
         background-size: cover;
         // background-image: url('https://img.freepik.com/free-vector/geometric-network-connection-background_23-2148876717.jpg?w=1060&t=st=1712421666~exp=1712422266~hmac=53f5e5295afeb2ab072a6a3b4df06372a749f0e98a82f27448cdc138042b7b20');
-        background-position: center center;
+        background-position: center right;
         background-repeat: no-repeat;
         z-index: 0;
         opacity: 8;
+        @include small-screen{
+            background-position: center center;
+        }
     }
     .cloud{
         position: absolute;
         bottom: 0;
         left: 0;
-        width:100%;
+        width:300%;
         z-index: 2;
-
+        @include small-screen{
+            width: 100%;
+        }
     }
     .cloud-soft{
         position: absolute;
         bottom: 0;
         left: 0; 
-        width: 100%;
+        width: 300%;
         z-index: 1;
         mix-blend-mode: soft-light;
+        @include small-screen{
+            width: 100%;
+        }
     }
     .content{
-        width: 1200px;
+        width: 100%;
         padding: 0 20px;
         position: relative;
         display: flex;
         flex-direction: column;
+        @include small-screen{
+            width: 1200px;
+        }
     }
 
 }
