--- a/src/components/intro/intro-content/style.scss
+++ b/src/components/intro/intro-content/style.scss
@@ -51,13 +51,13 @@
                 .big-text {
                     @include typography(42px, 400, 52px);
                     @include small-screen {
-                        @include typography(62px, 400, 72px);
+                        @include typography(60px, 400, 62px);
                     }
                 }
             }
             p {
                 color: $white;
-                @include typography(18px, 400, 24px);
+                @include typography(14px, 400, 20px);
                 margin: 15px 0;
                 padding: 0 15px;
                 text-align: center;
@@ -76,11 +76,12 @@
             }
         }
         .right-col {
-            width: 60%;
+            width: 100%;
             display: flex;
             align-items: flex-end;
             position: relative;
             flex-grow: 1;
+            // display: none;
             @include small-screen {
                 width: 55%;
                 flex-grow: unset;
@@ -89,27 +90,27 @@
                 width: 63%;
             }
             img {
-                width: 80%;
-                // display: block;
-                margin-bottom: 80px;
+                width: 50%;
+                display: block;
+                margin-bottom: 30px;
                 @include small-screen {
                     margin-bottom: 40px;
                 }
                 @include large-screen {
-                    margin-bottom: 50px;
+                    margin-bottom: 70px;
                     position: relative;
-                    right: -100px;
+                    right: -300px;
                 }
             }
             .highlights {
                 position: absolute;
                 border-radius: 6px;
-                // background: $white;
-                // @include glassmorphism-effect;
-                // transform: scale(0.6);
-                // @include small-screen {
-                //     transform: scale(1);
-                // }
+                background: $white;
+                @include glassmorphism-effect;
+                transform: scale(0.6);
+                @include small-screen {
+                    transform: scale(1);
+                }
                 .icon {
                     width: 55px;
                     height: 55px;
