--- a/src/components/shared/section/style.scss
+++ b/src/components/shared/section/style.scss
@@ -1,9 +1,12 @@
 @import "../../../style-config/mixins.scss" , "../../../style-config/variable.scss";
 .section{
-    padding:100px 0;
+    padding:50px 0;
     position: relative;
     display: flex;
     justify-content: center;
+    @include small-screen{
+        padding:100px 0;
+    }
     &.dark{
         background-color: $black;
     }
@@ -11,12 +14,15 @@
         background-color: $black-light;
     }
     .content{
-        width: 1200px;
+        width: 100%;
         padding: 0 20px;
         position: relative;
         display: flex;
         align-items: center;
         flex-direction: column;
+        @include small-screen{
+            width: 1200px;
+        }
         .section-title{
             width: 100%;
             text-align: center;
