:technologist::technologist: The port folio ready :technologist::technologist:

--- a/src/components/contact/contect-info/style.scss
+++ b/src/components/contact/contect-info/style.scss
@@ -4,13 +4,20 @@
 .contact-info-box{
 
     background-color: $black-lighter;
-    width: 355px;
-    padding: 30px;
+    width: 100%;
+    padding: 15px;
     border-radius: 6px;
     color: $gray;
+    @include small-screen{
+        width: 355px;
+    padding: 30px;
+    }
     h4{
-       line-height: 34px;
+       line-height: 24px;
        margin-bottom: 20px; 
+       @include small-screen{
+        line-height: 34px;
+       }
     }
 
 
