--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -9,7 +9,10 @@
     align-items: center;
     width: 100%;
     .footer-logo{
-        width: 150px;
+        width: 120px;
+        @include small-screen{
+            width: 150px;
+        }
         img{
             display: block;
             width: 100%;
@@ -23,10 +26,14 @@
         align-items: center;
         margin-top: 30px;
         .footer-menu-item{
-            @include typography(18px, 400, 22px);
+            @include typography(12px, 400, 20px);
             color: $white;
-            margin: 0 12.5px;
+            margin: 0 10px;
             cursor: pointer;
+            @include small-screen{
+                margin: 0 12.5px;
+                @include typography(18px, 400, 22px);
+            }
             &:hover{
                 opacity: 0.5;
             }
@@ -35,7 +42,12 @@
     .social-icons{
         display: flex;
         align-items: center;
-        margin-top: 30px;
+        margin-top: 15px;
+        transform:scale(0.7) ;
+        @include small-screen{
+            margin-top: 30px;
+            transform:scale(1) ;
+        }
         .social-icon{
             width: 45px;
             height: 45px;
@@ -54,13 +66,17 @@
     }
     .bottom-bar{
         width: 100%;
-        height: 75px;
+        height: 50px;
         border-top:1px solid rgba(225, 225, 225, 0.2);
         text-align: center;
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-top: 75px;
+        margin-top: 25px;
+        @include small-screen{
+            margin-top: 75px;
+            height: 75px;
+        }
         .copyright-text{
             color: #777777;
             @include typography(14px, 400, 22px);
