--- a/src/components/contact/style.scss
+++ b/src/components/contact/style.scss
@@ -1,8 +1,20 @@
 @import "../../style-config/mixins.scss", "../../style-config/variable.scss";
-.contect-content-wrapper{
+
+.contect-content-wrapper {
     display: flex;
-    flex-direction: row;
     width: 100%;
     margin-top: 25px;
-    
+    flex-direction: column;
+    @include small-screen {
+        margin-top: 75px;
+        flex-direction: row;
+    }
 }
+// @import "../../style-config/mixins.scss", "../../style-config/variable.scss";
+// .contect-content-wrapper{
+//     display: flex;
+//     flex-direction: row;
+//     width: 100%;
+//     margin-top: 25px;
+    
+// }
