--- a/src/components/portfolio/showcase/style.scss
+++ b/src/components/portfolio/showcase/style.scss
@@ -5,16 +5,26 @@
     flex-flow: row wrap;
     margin-left: -10px;
     margin-right: -10px;
-    height: 570px;
+    // height: 570px;
+    justify-content: center;
+    @include small-screen{
+        height: 570px;
+        justify-content: unset;
+    }
     .showcase-item{
-        width: 265px;
-        height: 265px;
+        width: 150px;
+        height: 150px;
         overflow: hidden;
-        border-radius: 15px;
+        border-radius: 5px;
         margin: 10px;
         position: relative;
         cursor: pointer;
         @include transition;
+        @include small-screen{
+            width: 265px;
+            height: 265px;
+            border-radius: 16px;
+        }
         img{
             width: 100%;
             height: 100%;
@@ -24,16 +34,25 @@
 
         }
         .meta-content{
-            visibility: hidden;
-            opacity: 0;
+            visibility: visible;
+            opacity: 1;
             position: absolute;
             bottom: 0;
-            left:20px;
+            left:0;
             padding: 10px;
-            margin-top: 20px;
-            border-radius: 10px;
+            // margin-top: 20px;
+            // border-radius: 10px;
+            width: 100%;
             @include glassmorphism-effect;
             @include transition;
+            @include small-screen{
+                width: fit-content;
+                visibility: hidden;
+                margin-right: 20px;
+                border-radius: 10px;
+                left: 20px;
+                padding: 10px;
+            }
             h3{
                 color: $black;
                 font-weight: 400;
@@ -65,14 +84,17 @@
 
 
         &:hover{
-            z-index: 1;
-            transform: scale(1.2);
-            box-shadow: 0px 0px 33px -8px rgba(0,0,0,0.75);
-            .meta-content{
-                visibility: visible;
-                opacity: 1;
-                transform: translateY(-20px);
+            @include small-screen{
+                z-index: 1;
+                transform: scale(1.2);
+                box-shadow: 0px 0px 33px -8px rgba(0,0,0,0.75);
+                .meta-content{
+                    visibility: visible;
+                    opacity: 1;
+                    transform: translateY(-20px);
+                }
             }
+            
         }
     }
 }
