--- a/src/components/portfolio/style.scss
+++ b/src/components/portfolio/style.scss
@@ -1,1 +1,6 @@
 @import "../../style-config/mixins.scss","../../style-config/variable.scss";
+.portfolio-content-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
