:technologist::technologist::technologist:

--- a/src/components/intro/intro-content/style.scss
+++ b/src/components/intro/intro-content/style.scss
@@ -19,6 +19,7 @@
             width: 100%;
             @include small-screen {
                 width: 45%;
+                margin-top: -55px;
             }
             @include medium-screen {
                 padding-top: 55px;
