--- a/src/components/intro/navigation-bar/style.scss
+++ b/src/components/intro/navigation-bar/style.scss
@@ -11,7 +11,7 @@
     @include small-screen{
         margin-top: 40px;
     }
-    .logo{
+    .app-log{
         width: 100px;
         flex-shrink: 0;
         @include small-screen{
@@ -20,6 +20,7 @@
         img{
          width: 100%;
          display: block;   
+         margin-left: -45px;
         }
     }
     .mobile-menu {
